# rust-talk

./: .gitignore  README.md  adoption-stats.md  apps-ports.md  benchmark-setup.md  benchmark.md  presentation.md  resources.md  savings-estimate.md  slides.md
parcel-api/: README.md  bench.sh  graph.py
parcel-api/bench-results/2026-06-04-fixed1g/: quarkus-jvm-g1.csv  quarkus-jvm-g1.phases.txt  quarkus-jvm-g1.rps.csv  quarkus-native-g1.csv  quarkus-native-g1.phases.txt  quarkus-native-g1.rps.csv  quarkus-native.csv  quarkus-native.phases.txt  quarkus-native.rps.csv  rust.csv  rust.phases.txt  rust.rps.csv  spring-boot-g1.csv  spring-boot-g1.phases.txt  spring-boot-g1.rps.csv
parcel-api/bench-results/2026-06-05-full4/: quarkus-jvm-g1.csv  quarkus-jvm-g1.phases.txt  quarkus-jvm-g1.rps.csv  quarkus-native-g1.csv  quarkus-native-g1.phases.txt  quarkus-native-g1.rps.csv  rust.csv  rust.phases.txt  rust.rps.csv  spring-boot-g1.csv  spring-boot-g1.phases.txt  spring-boot-g1.rps.csv
parcel-api/bench-results/2026-06-11-clean/: c.csv  c.phases.txt  c.rps.csv  go.csv  go.phases.txt  go.rps.csv  quarkus-jvm-g1.csv  quarkus-jvm-g1.phases.txt  quarkus-jvm-g1.rps.csv  quarkus-native-g1.csv  results.md  (+8 more)
parcel-api/parcel-api-c/: CMakeLists.txt  Dockerfile
parcel-api/parcel-api-c/src/: features.c  features.h  main.c  service.c  service.h
parcel-api/parcel-api-go/: Dockerfile  domain.go  features.go  go.mod  instant.go  main.go  service.go
parcel-api/parcel-api-node/: Dockerfile  README.md  features.js  package-lock.json  package.json  serialize.js  server.js  service.js
parcel-api/parcel-api-quarkus-jvm/: .gitignore  Dockerfile  README.md  gradle.properties  settings.gradle.kts
parcel-api/parcel-api-quarkus-native/: Dockerfile.native  Dockerfile.native-g1  README.md  build.gradle.kts  settings.gradle.kts
parcel-api/parcel-api-rust/: Cargo.toml  Dockerfile  README.md
parcel-api/parcel-api-rust/config/: production.toml
parcel-api/parcel-api-rust/src/: app.rs  config.rs  lib.rs  main.rs
parcel-api/parcel-api-rust/src/controller/: health.rs  mapper.rs  mod.rs  parcel.rs  response.rs
parcel-api/parcel-api-rust/src/domain/: parcel.rs
parcel-api/parcel-api-rust/src/service/: features.rs  mod.rs  stub.rs
parcel-api/parcel-api-rust/tests/: health.rs  parcel.rs  swagger.rs
parcel-api/parcel-api-rust/tests/common/: mod.rs
parcel-api/parcel-api-spring-boot/: .editorconfig  .gitignore  Dockerfile  build.gradle.kts  settings.gradle.kts
parcel-api/parcel-data/: TESTPARCEL0001000000.json  TESTPARCEL0001000001.json  TESTPARCEL0001000002.json  TESTPARCEL0001000003.json  TESTPARCEL0001000004.json  TESTPARCEL0001000005.json  TESTPARCEL0001000006.json  TESTPARCEL0001000007.json  TESTPARCEL0001000008.json  TESTPARCEL0001000009.json  TESTPARCEL0001000010.json  TESTPARCEL0001000011.json  TESTPARCEL0001000012.json  TESTPARCEL0001000013.json  TESTPARCEL0001000014.json  TESTPARCEL0001000015.json  TESTPARCEL0001000016.json  TESTPARCEL0001000017.json  TESTPARCEL0001000018.json  TESTPARCEL0001000019.json  TESTPARCEL0001000020.json  TESTPARCEL0001000021.json  TESTPARCEL0001000022.json  TESTPARCEL0001000023.json  TESTPARCEL0001000024.json  TESTPARCEL0001000025.json  TESTPARCEL0001000026.json  TESTPARCEL0001000027.json  TESTPARCEL0001000028.json  TESTPARCEL0001000029.json  TESTPARCEL0001000030.json  TESTPARCEL0001000031.json  TESTPARCEL0001000032.json  TESTPARCEL0001000033.json  TESTPARCEL0001000034.json  TESTPARCEL0001000035.json  TESTPARCEL0001000036.json  TESTPARCEL0001000037.json  TESTPARCEL0001000038.json  TESTPARCEL0001000039.json  (+60 more)
(+54 files in other folders)
