[package]
name = "parcel-api"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "parcel_api"
path = "src/lib.rs"

[[bin]]
name = "parcel-api"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

figment = { version = "0.10", features = ["toml", "env"] }

utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

thiserror = "1"

rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = "1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
